[metadata]
name = vitu
version  = 0.0.1
url = https://github.com/vienai8d/vitu
author  =  vienai8d
license = MIT
description = vienai8d's tensorflow utilities
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
    pandas
    numpy
entry_points = file: entry_points.cfg